# pdf_translator

./: .env-template  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  increment_version.sh  pdf_translator.code-workspace  translated_text.json  translated_text.txt
.github/workflows/: build.yml  lint-checker.yml  test.yml
src/: main.rs
test-files/: Winch (2004).txt  example.txt
