[package]
name = "pdf_translator"
description = "A CLI tool to parse text from a pdf and translate it to Swedish"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "7.2.0"
clap = { version = "4.4.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1.32.0", features = ["full"] }

