[package]
name = "pdf_translator"
authors = ["Retrokiller543 <emil.schutt@gmail.com>"]
description = "A CLI tool to parse text from a pdf and translate it to Swedish"
version = "1.1.0"
rust-version = "1.72.0"
license = "MIT"
repository = "https://github.com/retrokiller543/pdf_translator"
readme = "README.md"
keywords = ["pdf", "translate", "translator"]
categories = ["command-line-utilities"]
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "7.2.0"
clap = { version = "4.4.2", features = ["derive", "wrap_help"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.6"
directories = "5.0.1"
